turtle_workspace/log/build_2024-04-23_15-23-06/turtle_pond/stderr.log
  File "/home/guilherme04/turtle_workspace/install/turtle_pond/lib/python3.10/site-packages/turtle_pond/turtle.py", line 91
    kill_request.
                 ^
SyntaxError: invalid syntax

